Added info to the README.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   		<h1><%= title %></h1>
   	</div>
   	<div class='row' data-section='intro'>
-  		<p>Welcome to the JBFC Oscar Poll!  Enter your email address and your predictions for the 2014 Oscars below.  The person with the most correct answers will win a $200 gift card to the Jacob Burns Film Center!</p>
+  		<p>Welcome to some sort of poll!</p>
   	</div>
   	<form id='quiz-form'>
   		<div class='row' data-section='user'>
