--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,12 +39,10 @@
         <li class="divider"></li>
         <li><a href='support'>Support</a></li>
         <li class="divider"></li>
-        <li ng-show="!user.email"><a href="signup">Sign up</a></li>
-        <li ng-show="!user.email" class="divider"></li>
-        <li ng-show="!user.email"><a href='login'>Log in</a></li>
-        <li ng-show="user.email"><a href='logout'>{{user.email}}</a></li>
+        <li><a href="signup">Sign up</a></li>
+        <li class="divider"></li>
+        <li><a href='login'>Log in</a></li>
         <li ng-show="user.email" class="divider"></li>
-        <li ng-show="user.email"><a href='logout'>Log out</a></li>
       </ul>
     </section>
   </nav>
