--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -118,6 +118,14 @@
       </div> 
     </div>
   </div>
+  <div class='row'>
+    <div class='large-12 columns'>
+      <h5>
+        Please note: This app is built for HTML5 compatible browsers.  Older browsers, like Internet Explorer 9 and earlier, are not supported, and might not work correctly.  Please use a recent version of Firefox, Chrome, Safari, or Opera to create tests.
+      </h5>
+      <h5>Test-taking is compatible with almost every browser.</h5>
+    </div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
   <script src="./javascripts/supersimple.js"></script>
 </body>
