--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!doctype html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inquizitor - Some kind of tagline.</title>
+    <title>Inquizitor</title>
 
     <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more." />
     
@@ -67,18 +67,6 @@
     </div>
     -->
     <!-- End Content Slider -->
- 
-    <!-- Mobile Header -->
- 
-      <div class="row">
-        <div class="large-12 columns show-for-small">
- 
-          <img src="http://placehold.it/1200x700&text=Mobile Header">
- 
-        </div>
-      </div><br>
- 
-    <!-- End Mobile Header -->
  
       
       <div class="row">
