--- a/public/javascripts/templates/list.html
+++ b/public/javascripts/templates/list.html
@@ -9,15 +9,15 @@
 	</div>
 	<hr/>
 </div>
-<div class='row' ng-repeat='quiz in quizzes | orderBy:"-created"'>
+<div class='row' data-ng-repeat='quiz in quizzes | orderBy:"-created"'>
 	<div class='large-1 columns'>
-		<a ng-click='DeleteQuiz(quiz)' style='color:red;' title='Delete this.'><i class='fi-x'></i></a>
+		<a data-ng-click='DeleteQuiz(quiz)' style='color:red;' title='Delete this.'><i class='fi-x'></i></a>
 	</div>
 	<div class='large-9 columns'>
-		<a ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz'>{{quiz.name}}</a>
+		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz'>{{quiz.name}}</a>
 	</div>
 	<div class='large-2 columns'>
-		<span title='alternate title' ng-attr-title="{{quiz.created | date:'h:mma, EEE MMM d, yyyy'}}">{{quiz.created | date:'MMM d, yyyy'}}</span>
+		<span title='alternate title' data-ng-attr-title="{{quiz.created | date:'h:mma, EEE MMM d, yyyy'}}">{{quiz.created | date:'MMM d, yyyy'}}</span>
 	</div>
 	<hr/>
 </div>
