--- a/public/javascripts/templates/view.html
+++ b/public/javascripts/templates/view.html
@@ -1,38 +1,38 @@
 <div class='row' ng-show='!quiz'>
-	<h1>Loading...</h1>
+	<h1>{{message}}</h1>
 </div>
-<div class='row' ng-show='quiz'>
+<div class='row' data-ng-show='quiz'>
 	<form id='quizform' name='quizform' novalidate>
-		<div class='row' ng-show='errorMessage.length'>
+		<div class='row' data-ng-show='errorMessage.length'>
 			<div class='label alert large-12 columns'>
 				<h1>{{errorMessage}}</h1>
 			</div>
 			<div class='large-12 columns'>
-				<h4><a ng-click='TakeMeHome()'>Go back home.</a></h4>
+				<h4><a data-ng-click='TakeMeHome()'>Go back home.</a></h4>
 			</div>
 		</div>
-		<div class='row' ng-show='!errorMessage'>
+		<div class='row' data-ng-show='!errorMessage'>
 			<div class='row quiz_heading'>
 				<div class='large-12 columns'>
 					<h1>{{quiz.name}}</h1>
-					<h4 ng-bind-html='quiz.description'>{{quiz.description}}</h4>
+					<h4 data-ng-bind-html='quiz.description'>{{quiz.description}}</h4>
 				</div>
 			</div>
 			<div class='row quiz_contents'>
 				<div class='large-12 columns'>
 					<h4 class='panel'>
 						Email - Please enter your email address so we can identify whose answers are whose.
-						<input ng-model='email' type='email' name='email' id='email' placeholder='abc@xyz.com' required></input>
+						<input data-ng-model='email' type='email' name='email' id='email' placeholder='abc@xyz.com' required></input>
 					</h4>
 				</div>
-				<div class='large-12 columns' ng-repeat='question in quiz.questions'>
-					<h4 ng-bind-html='question.text'></h4>
-					<textarea ng-model="question.response" ng-show='question.type != "multiple_choice"'></textarea>
-					<div class='large-12 columns' ng-show='question.type == "multiple_choice"'>
+				<div class='large-12 columns' data-ng-repeat='question in quiz.questions'>
+					<h4 data-ng-bind-html='question.text'></h4>
+					<textarea data-ng-model="question.response" data-ng-show='question.type != "multiple_choice"'></textarea>
+					<div class='large-12 columns' data-ng-show='question.type == "multiple_choice"'>
 						<ul class='large-block-grid-5 medium-block-grid-5 small-block-grid-5'>
-							<li ng-repeat='choice in question.choices' >
+							<li data-ng-repeat='choice in question.choices' >
 								<label style='text-align:center;'>
-									<img ng-show='choice.img' ng-src='{{choice.img}}' ng-attr-alt='{{choice.text}}' ng-attr-title='{{choice.text}}' style='margin-bottom:5px;' />
+									<img data-ng-show='choice.img' data-ng-src='{{choice.img}}' data-ng-attr-alt='{{choice.text}}' data-ng-attr-title='{{choice.text}}' style='margin-bottom:5px;' />
 									<input 
 										style='display:block; margin-bottom:0px; margin-left:auto; margin-right:auto;'
 										ng-model ='question.response'
@@ -57,9 +57,7 @@
 				</div>
 				<div class='large-12 columns'>
 					<h4 class='right'>
-						<a class='button radius' href='#'>View Results</a>
-						<a class='button alert' href='#'>Reset</a>
-						<a class='button radius success' ng-disabled='!quizform.$valid' ng-class='submitClass' ng-click='SubmitResponse()'>Submit</a>
+						<a class='button radius alert greenback' data-ng-disabled='!quizform.$valid' data-ng-class='submitClass' data-ng-click='SubmitResponse()'>Submit</a>
 					</h4>
 				</div>
 			</div>
