Formatting fix possibly

--- a/public/javascripts/templates/view.html
+++ b/public/javascripts/templates/view.html
@@ -2,6 +2,7 @@
 	<h1>{{message}}</h1>
 </div>
 <div class='row' data-ng-show='quiz'>
+	<div class='large-12 medium-12 small-12 columns'>
 	<form id='quizform' name='quizform' novalidate>
 		<div class='row' data-ng-show='errorMessage.length'>
 			<div class='label alert large-12 columns'>
@@ -66,4 +67,5 @@
 			</div>
 		</div>
 		</form>
+	</div>
 </div>
