--- a/public/javascripts/templates/view.html
+++ b/public/javascripts/templates/view.html
@@ -3,7 +3,7 @@
 </div>
 <div class='row' data-ng-show='quiz'>
 	<div class='large-12 medium-12 small-12 columns'>
-	<form id='quizform' name='quizform' novalidate>
+	<form id='quizform' name='quizform' ng-class='val' novalidate>
 		<div class='row' data-ng-show='errorMessage.length'>
 			<div class='label alert large-12 columns'>
 				<h1>{{errorMessage}}</h1>
@@ -56,9 +56,17 @@
 						<!-- load options from the app somehow -->
 					<!-- </select>-->
 				</div>
+				<div class='large-12 medium-12 small-12 columns' ng-show='validationError'>
+					<div class='row'>
+						<div class='large-12 medium-12 small-12 alertback radius columns'>
+							<p style='font-size:2em;' ng-bind='validationError'></p>
+						</div>
+					</div>
+				</div>
 				<div class='large-12 columns'>
 					<h4 class='right'>
-						<a class='button radius alert greenback' data-ng-disabled='!quizform.$valid' data-ng-class='submitClass' data-ng-click='SubmitResponse()'>Submit</a>
+						<!-- <a class='button radius alert greenback' data-ng-disabled='!quizform.$valid' data-ng-class='submitClass' data-ng-click='SubmitResponse()'>Submit</a> -->
+						<a class='button radius alert greenback' data-ng-class='submitClass' data-ng-click='SubmitResponse()'>Submit</a>
 					</h4>
 				</div>
 			</div>
