--- a/public/javascripts/templates/edit.html
+++ b/public/javascripts/templates/edit.html
@@ -3,7 +3,7 @@
 	<h1>Loading...</h1>
 </div>
 <div class='row quiz_display' data-ng-show='quiz'>
-	<h1>{{quiz.name}}</h1>
+	<h1 data-ng-bind-html='quiz.name'>{{quiz.name}}</h1>
 	<div class='large-12 columns'>
 		<h4>Title</h4>
 		<input type='text' data-ng-maxlength='65' placeholder='Quiz Title' data-ng-model='quiz.name' required />
