--- a/public/javascripts/templates/list.html
+++ b/public/javascripts/templates/list.html
@@ -14,7 +14,7 @@
 		<a data-ng-click='DeleteQuiz(quiz)' style='color:red;' title='Delete this.'><i class='fi-x'></i></a>
 	</div>
 	<div class='large-9 columns'>
-		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz'>{{quiz.name}}</a>
+		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz' data-ng-bind-html='quiz.name'>{{quiz.name}}</a>
 	</div>
 	<div class='large-2 columns'>
 		<span title='alternate title' data-ng-attr-title="{{quiz.created | date:'h:mma, EEE MMM d, yyyy'}}">{{quiz.created | date:'MMM d, yyyy'}}</span>
