--- a/public/javascripts/templates/list.html
+++ b/public/javascripts/templates/list.html
@@ -12,9 +12,11 @@
 <div class='row' data-ng-repeat='quiz in quizzes | orderBy:"-created"'>
 	<div class='large-1 columns'>
 		<a data-ng-click='DeleteQuiz(quiz)' style='color:red;' title='Delete this.'><i class='fi-x'></i></a>
+		<a data-ng-click='CopyQuiz(quiz)' alt='Create a copy of this quiz as a new quiz'><i style='color:lightGreen;' class='fi-page-copy'></i></a>
 	</div>
 	<div class='large-9 columns'>
 		<a data-ng-href='#/edit/{{ quiz._id }}' alt='edit quiz' title='Edit this quiz' data-ng-bind-html='quiz.name'>{{quiz.name}}</a>
+
 	</div>
 	<div class='large-2 columns'>
 		<span title='alternate title' data-ng-attr-title="{{quiz.created | date:'h:mma, EEE MMM d, yyyy'}}">{{quiz.created | date:'MMM d, yyyy'}}</span>
